# SuperpixelAttack

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run  source.pptx
config/: acc_sign_hunter.yaml  advanced_local_search.yaml  boundary.yaml  gen_attack.yaml  geo_da.yaml  hals.yaml  improved_local_search.yaml  local_search.yaml  local_search_revise.yaml  parsimonious_attack.yaml  plus_boundary.yaml  proposed_attention.yaml  proposed_base.yaml  proposed_boundary.yaml  proposed_color.yaml  proposed_local_search.yaml  proposed_method.yaml  proposed_method_exp.yaml  proposed_method_with_removel.yaml  proposed_plus_boundary.yaml  proposed_tabu.yaml  proposed_tabu_search.yaml  saliency_attack.yaml  sign_hunter.yaml  square_attack.yaml  superpixel_attack.yaml  tabu_search.yaml
config/default/: FGSM.yaml  GenAttack.yaml  HALS.yaml  PGD.yaml  SquareAttack2.yaml  TransferHALS.yaml  boundary_attack.yaml  boundary_attack_art.yaml  gen_attack.yaml  gen_attack_foolbox.yaml  gradient_approximation.yaml  hals.yaml  square_attack.yaml  tabu_attack.yaml
config/paper/: boundary_attack_1000.yaml  boundary_attack_10000.yaml  boundary_attack_300.yaml  boundary_attack_3000.yaml  boundary_attack_30000.yaml  (+23 more)
exp/: 1-baseline.sh  2-update_area.sh  3-update_method.sh  4-calculate_time.sh  baseline.sh  cal_compactness.py  cal_icv.py  install_slic_reverse.sh  update_method.sh  visualize_imagenet.py  visualize_superpixel.py
setup/: download_models.py  setup_imagenet.py
src/: attack.py  devide_dataset.py  divide_dataset.py  main.py  optuna.py  run_robustbench.sh
(+274 files in other folders)
